parser.output
Terminals unused in grammar

   TOKEN_EOF
   TOKEN_WHILE
   TOKEN_COMMENT
   TOKEN_LENGTH_ERROR
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl decl_list
    3          | %empty

    4 decl: ident TOKEN_COLON type TOKEN_SEMICOLON
    5     | ident TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
    6     | assign_decl

    7 assign_decl: ident TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY
    8            | ident TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON

    9 type: TOKEN_INTEGER
   10     | TOKEN_BOOLEAN
   11     | TOKEN_CHAR
   12     | TOKEN_STRING
   13     | TOKEN_VOID
   14     | TOKEN_ARRAY TOKEN_LBRACKET opt_expr TOKEN_RBRACKET type

   15 expr: expr TOKEN_ASSIGN expr2
   16     | expr2

   17 expr2: expr2 TOKEN_OR expr3
   18      | expr3

   19 expr3: expr3 TOKEN_AND expr4
   20      | expr4

   21 expr4: expr4 TOKEN_LT expr5
   22      | expr4 TOKEN_GT expr5
   23      | expr4 TOKEN_GE expr5
   24      | expr4 TOKEN_LE expr5
   25      | expr4 TOKEN_EQ expr5
   26      | expr4 TOKEN_NE expr5
   27      | expr5

   28 expr5: expr5 TOKEN_PLUS expr6
   29      | expr5 TOKEN_MINUS expr6
   30      | expr6

   31 expr6: expr6 TOKEN_STAR expr7
   32      | expr6 TOKEN_SLASH expr7
   33      | expr6 TOKEN_MOD expr7
   34      | expr7

   35 expr7: expr7 TOKEN_EXPONENT expr8
   36      | expr8

   37 expr8: TOKEN_NEGATION expr9
   38      | TOKEN_MINUS expr9
   39      | expr9

   40 expr9: expr9 TOKEN_INCREMENT
   41      | expr9 TOKEN_DECREMENT
   42      | expr10

   43 expr10: ident expr11
   44       | ident
   45       | TOKEN_INT_LITERAL
   46       | TOKEN_CHAR_LITERAL
   47       | TOKEN_STRING_LITERAL
   48       | TOKEN_TRUE
   49       | TOKEN_FALSE
   50       | TOKEN_LCURLY expr expr_list2 TOKEN_RCURLY
   51       | TOKEN_LPAREN expr TOKEN_RPAREN

   52 expr11: TOKEN_LBRACKET expr TOKEN_RBRACKET bracket_list
   53       | TOKEN_LPAREN expr_list TOKEN_RPAREN

   54 opt_expr: expr
   55         | %empty

   56 stmt: stmt2
   57     | stmt3
   58     | TOKEN_FOR TOKEN_LPAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RPAREN stmt
   59     | decl

   60 stmt2: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
   61      | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt4 TOKEN_ELSE stmt

   62 stmt3: TOKEN_LCURLY stmt_list TOKEN_RCURLY
   63      | expr TOKEN_SEMICOLON
   64      | TOKEN_RETURN opt_expr TOKEN_SEMICOLON
   65      | TOKEN_PRINT expr_list TOKEN_SEMICOLON

   66 stmt4: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt4 TOKEN_ELSE stmt4
   67      | TOKEN_FOR TOKEN_LPAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RPAREN stmt4
   68      | stmt3

   69 stmt_list: stmt stmt_list
   70          | %empty

   71 param_list: ident TOKEN_COLON type
   72           | param_list TOKEN_COMMA ident TOKEN_COLON type
   73           | %empty

   74 bracket_list: TOKEN_LBRACKET expr TOKEN_RBRACKET bracket_list
   75             | %empty

   76 expr_list: expr expr_list2
   77          | %empty

   78 expr_list2: TOKEN_COMMA expr expr_list2
   79           | %empty

   80 ident: TOKEN_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258)
TOKEN_ARRAY (259) 14
TOKEN_BOOLEAN (260) 10
TOKEN_CHAR (261) 11
TOKEN_ELSE (262) 61 66
TOKEN_FALSE (263) 49
TOKEN_FOR (264) 58 67
TOKEN_FUNCTION (265) 5 7
TOKEN_IF (266) 60 61 66
TOKEN_INTEGER (267) 9
TOKEN_PRINT (268) 65
TOKEN_RETURN (269) 64
TOKEN_STRING (270) 12
TOKEN_TRUE (271) 48
TOKEN_VOID (272) 13
TOKEN_WHILE (273)
TOKEN_LPAREN (274) 5 7 51 53 58 60 61 66 67
TOKEN_RPAREN (275) 5 7 51 53 58 60 61 66 67
TOKEN_LBRACKET (276) 14 52 74
TOKEN_RBRACKET (277) 14 52 74
TOKEN_LCURLY (278) 7 50 62
TOKEN_RCURLY (279) 7 50 62
TOKEN_PLUS (280) 28
TOKEN_MINUS (281) 29 38
TOKEN_EXPONENT (282) 35
TOKEN_STAR (283) 31
TOKEN_SLASH (284) 32
TOKEN_MOD (285) 33
TOKEN_LT (286) 21
TOKEN_GT (287) 22
TOKEN_GE (288) 23
TOKEN_LE (289) 24
TOKEN_EQ (290) 25
TOKEN_NE (291) 26
TOKEN_AND (292) 19
TOKEN_OR (293) 17
TOKEN_COLON (294) 4 5 7 8 71 72
TOKEN_SEMICOLON (295) 4 5 8 58 63 64 65 67
TOKEN_COMMA (296) 72 78
TOKEN_INT_LITERAL (297) 45
TOKEN_CHAR_LITERAL (298) 46
TOKEN_ASSIGN (299) 7 8 15
TOKEN_COMMENT (300)
TOKEN_STRING_LITERAL (301) 47
TOKEN_DECREMENT (302) 41
TOKEN_IDENTIFIER (303) 80
TOKEN_INCREMENT (304) 40
TOKEN_NEGATION (305) 37
TOKEN_LENGTH_ERROR (306)
TOKEN_ERROR (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
decl_list (55)
    on left: 2 3, on right: 1 2
decl (56)
    on left: 4 5 6, on right: 2 59
assign_decl (57)
    on left: 7 8, on right: 6
type (58)
    on left: 9 10 11 12 13 14, on right: 4 5 7 8 14 71 72
expr (59)
    on left: 15 16, on right: 8 15 50 51 52 54 60 61 63 66 74 76 78
expr2 (60)
    on left: 17 18, on right: 15 16 17
expr3 (61)
    on left: 19 20, on right: 17 18 19
expr4 (62)
    on left: 21 22 23 24 25 26 27, on right: 19 20 21 22 23 24 25 26
expr5 (63)
    on left: 28 29 30, on right: 21 22 23 24 25 26 27 28 29
expr6 (64)
    on left: 31 32 33 34, on right: 28 29 30 31 32 33
expr7 (65)
    on left: 35 36, on right: 31 32 33 34 35
expr8 (66)
    on left: 37 38 39, on right: 35 36
expr9 (67)
    on left: 40 41 42, on right: 37 38 39 40 41
expr10 (68)
    on left: 43 44 45 46 47 48 49 50 51, on right: 42
expr11 (69)
    on left: 52 53, on right: 43
opt_expr (70)
    on left: 54 55, on right: 14 58 64 67
stmt (71)
    on left: 56 57 58 59, on right: 58 60 61 69
stmt2 (72)
    on left: 60 61, on right: 56
stmt3 (73)
    on left: 62 63 64 65, on right: 57 68
stmt4 (74)
    on left: 66 67 68, on right: 61 66 67
stmt_list (75)
    on left: 69 70, on right: 7 62 69
param_list (76)
    on left: 71 72 73, on right: 5 7 72
bracket_list (77)
    on left: 74 75, on right: 52 74
expr_list (78)
    on left: 76 77, on right: 53 65
expr_list2 (79)
    on left: 78 79, on right: 50 76 78
ident (80)
    on left: 80, on right: 4 5 7 8 43 44 71 72


State 0

    0 $accept: . program $end

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    program      go to state 2
    decl_list    go to state 3
    decl         go to state 4
    assign_decl  go to state 5
    ident        go to state 6


State 1

   80 ident: TOKEN_IDENTIFIER .

    $default  reduce using rule 80 (ident)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: decl_list .

    $default  reduce using rule 1 (program)


State 4

    2 decl_list: decl . decl_list

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    decl_list    go to state 8
    decl         go to state 4
    assign_decl  go to state 5
    ident        go to state 6


State 5

    6 decl: assign_decl .

    $default  reduce using rule 6 (decl)


State 6

    4 decl: ident . TOKEN_COLON type TOKEN_SEMICOLON
    5     | ident . TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
    7 assign_decl: ident . TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY
    8            | ident . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_COLON  shift, and go to state 9


State 7

    0 $accept: program $end .

    $default  accept


State 8

    2 decl_list: decl decl_list .

    $default  reduce using rule 2 (decl_list)


State 9

    4 decl: ident TOKEN_COLON . type TOKEN_SEMICOLON
    5     | ident TOKEN_COLON . TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
    7 assign_decl: ident TOKEN_COLON . TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY
    8            | ident TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_ARRAY     shift, and go to state 10
    TOKEN_BOOLEAN   shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_FUNCTION  shift, and go to state 13
    TOKEN_INTEGER   shift, and go to state 14
    TOKEN_STRING    shift, and go to state 15
    TOKEN_VOID      shift, and go to state 16

    type  go to state 17


State 10

   14 type: TOKEN_ARRAY . TOKEN_LBRACKET opt_expr TOKEN_RBRACKET type

    TOKEN_LBRACKET  shift, and go to state 18


State 11

   10 type: TOKEN_BOOLEAN .

    $default  reduce using rule 10 (type)


State 12

   11 type: TOKEN_CHAR .

    $default  reduce using rule 11 (type)


State 13

    5 decl: ident TOKEN_COLON TOKEN_FUNCTION . type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
    7 assign_decl: ident TOKEN_COLON TOKEN_FUNCTION . type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY

    TOKEN_ARRAY    shift, and go to state 10
    TOKEN_BOOLEAN  shift, and go to state 11
    TOKEN_CHAR     shift, and go to state 12
    TOKEN_INTEGER  shift, and go to state 14
    TOKEN_STRING   shift, and go to state 15
    TOKEN_VOID     shift, and go to state 16

    type  go to state 19


State 14

    9 type: TOKEN_INTEGER .

    $default  reduce using rule 9 (type)


State 15

   12 type: TOKEN_STRING .

    $default  reduce using rule 12 (type)


State 16

   13 type: TOKEN_VOID .

    $default  reduce using rule 13 (type)


State 17

    4 decl: ident TOKEN_COLON type . TOKEN_SEMICOLON
    8 assign_decl: ident TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 20
    TOKEN_ASSIGN     shift, and go to state 21


State 18

   14 type: TOKEN_ARRAY TOKEN_LBRACKET . opt_expr TOKEN_RBRACKET type

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_MINUS           shift, and go to state 26
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_NEGATION        shift, and go to state 30

    $default  reduce using rule 55 (opt_expr)

    expr      go to state 31
    expr2     go to state 32
    expr3     go to state 33
    expr4     go to state 34
    expr5     go to state 35
    expr6     go to state 36
    expr7     go to state 37
    expr8     go to state 38
    expr9     go to state 39
    expr10    go to state 40
    opt_expr  go to state 41
    ident     go to state 42


State 19

    5 decl: ident TOKEN_COLON TOKEN_FUNCTION type . TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_SEMICOLON
    7 assign_decl: ident TOKEN_COLON TOKEN_FUNCTION type . TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY

    TOKEN_LPAREN  shift, and go to state 43


State 20

    4 decl: ident TOKEN_COLON type TOKEN_SEMICOLON .

    $default  reduce using rule 4 (decl)


State 21

    8 assign_decl: ident TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SEMICOLON

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_MINUS           shift, and go to state 26
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_NEGATION        shift, and go to state 30

    expr    go to state 44
    expr2   go to state 32
    expr3   go to state 33
    expr4   go to state 34
    expr5   go to state 35
    expr6   go to state 36
    expr7   go to state 37
    expr8   go to state 38
    expr9   go to state 39
    expr10  go to state 40
    ident   go to state 42


State 22

   49 expr10: TOKEN_FALSE .

    $default  reduce using rule 49 (expr10)


State 23

   48 expr10: TOKEN_TRUE .

    $default  reduce using rule 48 (expr10)


State 24

   51 expr10: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_MINUS           shift, and go to state 26
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_NEGATION        shift, and go to state 30

    expr    go to state 45
    expr2   go to state 32
    expr3   go to state 33
    expr4   go to state 34
    expr5   go to state 35
    expr6   go to state 36
    expr7   go to state 37
    expr8   go to state 38
    expr9   go to state 39
    expr10  go to state 40
    ident   go to state 42


State 25

   50 expr10: TOKEN_LCURLY . expr expr_list2 TOKEN_RCURLY

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_MINUS           shift, and go to state 26
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_NEGATION        shift, and go to state 30

    expr    go to state 46
    expr2   go to state 32
    expr3   go to state 33
    expr4   go to state 34
    expr5   go to state 35
    expr6   go to state 36
    expr7   go to state 37
    expr8   go to state 38
    expr9   go to state 39
    expr10  go to state 40
    ident   go to state 42


State 26

   38 expr8: TOKEN_MINUS . expr9

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1

    expr9   go to state 47
    expr10  go to state 40
    ident   go to state 42


State 27

   45 expr10: TOKEN_INT_LITERAL .

    $default  reduce using rule 45 (expr10)


State 28

   46 expr10: TOKEN_CHAR_LITERAL .

    $default  reduce using rule 46 (expr10)


State 29

   47 expr10: TOKEN_STRING_LITERAL .

    $default  reduce using rule 47 (expr10)


State 30

   37 expr8: TOKEN_NEGATION . expr9

    TOKEN_FALSE           shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_LPAREN          shift, and go to state 24
    TOKEN_LCURLY          shift, and go to state 25
    TOKEN_INT_LITERAL     shift, and go to state 27
    TOKEN_CHAR_LITERAL    shift, and go to state 28
    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_IDENTIFIER      shift, and go to state 1

    expr9   go to state 48
    expr10  go to state 40
    ident   go to state 42


State 31

   15 expr: expr . TOKEN_ASSIGN expr2
   54 opt_expr: expr .

    TOKEN_ASSIGN  shift, and go to state 49

    $default  reduce using rule 54 (opt_expr)


State 32

   16 expr: expr2 .
   17 expr2: expr2 . TOKEN_OR expr3

    TOKEN_OR  shift, and go to state 50

    $default  reduce using rule 16 (expr)


State 33

   18 expr2: expr3 .
   19 expr3: expr3 . TOKEN_AND expr4

    TOKEN_AND  shift, and go to state 51

    $default  reduce using rule 18 (expr2)


State 34

   20 expr3: expr4 .
   21 expr4: expr4 . TOKEN_LT expr5
   22      | expr4 . TOKEN_GT expr5
   23      | expr4 . TOKEN_GE expr5
   24      | expr4 . TOKEN_LE expr5
   25      | expr4 . TOKEN_EQ expr5
   26      | expr4 . TOKEN_NE expr5

    TOKEN_LT  shift, and go to state 52
    TOKEN_GT  shift, and go to state 53
    TOKEN_GE  shift, and go to state 54
    TOKEN_LE  shift, and go to state 55
    TOKEN_EQ  shift, and go to state 56
    TOKEN_NE  shift, and go to state 57

    $default  reduce using rule 20 (expr3)


State 35

   27 expr4: expr5 .
   28 expr5: expr5 . TOKEN_PLUS expr6
   29      | expr5 . TOKEN_MINUS expr6

    TOKEN_PLUS   shift, and go to state 58
    TOKEN_MINUS  shift, and go to state 59

    $default  reduce using rule 27 (expr4)


State 36

   30 expr5: expr6 .
   31 expr6: expr6 . TOKEN_STAR expr7
   32      | expr6 . TOKEN_SLASH expr7
   33      | expr6 . TOKEN_MOD expr7

    TOKEN_STAR   shift, and go to state 60
    TOKEN_SLASH  shift, and go to state 61
    TOKEN_MOD    shift, and go to state 62

    $default  reduce using rule 30 (expr5)


State 37

   34 expr6: expr7 .
   35 expr7: expr7 . TOKEN_EXPONENT expr8

    TOKEN_EXPONENT  shift, and go to state 63

    $default  reduce using rule 34 (expr6)


State 38

   36 expr7: expr8 .

    $default  reduce using rule 36 (expr7)


State 39

   39 expr8: expr9 .
   40 expr9: expr9 . TOKEN_INCREMENT
   41      | expr9 . TOKEN_DECREMENT

    TOKEN_DECREMENT  shift, and go to state 64
    TOKEN_INCREMENT  shift, and go to state 65

    $default  reduce using rule 39 (expr8)


State 40

   42 expr9: expr10 .

    $default  reduce using rule 42 (expr9)


State 41

   14 type: TOKEN_ARRAY TOKEN_LBRACKET opt_expr . TOKEN_RBRACKET type

    TOKEN_RBRACKET  shift, and go to state 66


State 42

   43 expr10: ident . expr11
   44       | ident .

    TOKEN_LPAREN    shift, and go to state 67
    TOKEN_LBRACKET  shift, and go to state 68

    $default  reduce using rule 44 (expr10)

    expr11  go to state 69


State 43

    5 decl: ident TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN . param_list TOKEN_RPAREN TOKEN_SEMICOLON
    7 assign_decl: ident TOKEN_COLON TOKEN_FUNCTION type TOKEN_LPAREN . param_list TOKEN_RPAREN TOKEN_ASSIGN TOKEN_LCURLY stmt_list TOKEN_RCURLY

    TOKEN_IDENTIFIER  shift, and go to state 1
